// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput connect should render 1`] = `
<SearchInput
  filterText="Test"
  onFilterTextChange={[Function]}
  t={[Function]}
/>
`;

exports[`SearchInput should render 1`] = `
<SearchInputstyles__Spacer>
  <SearchInputstyles__Wrapper>
    <SearchInputstyles__SearchIcon />
    <SearchInputstyles__TextInput
      autoFocus={true}
      defaultValue="Test"
      onChange={[Function]}
      placeholder="search"
    />
  </SearchInputstyles__Wrapper>
</SearchInputstyles__Spacer>
`;

exports[`SearchInput should render and space search 1`] = `
<SearchInputstyles__Spacer
  space={true}
>
  <SearchInputstyles__Wrapper>
    <SearchInputstyles__SearchIcon />
    <SearchInputstyles__TextInput
      autoFocus={true}
      defaultValue="Test"
      onChange={[Function]}
      placeholder="search"
    />
  </SearchInputstyles__Wrapper>
</SearchInputstyles__Spacer>
`;
